--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "16.0.0-beta.5",
     "react-native": "^0.49.5",
     "react-native-mapbox-gl": "^5.2.0",
+    "react-native-maps": "^0.17.1",
     "react-native-router-flux": "^4.0.0-beta.23",
     "react-navigation": "^1.0.0-beta.19"
   }
