--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@mapbox/react-native-mapbox-gl": "^6.0.0",
     "expo": "^22.0.2",
+    "express": "^4.16.2",
     "mapbox-gl": "^0.41.0",
     "react": "16.0.0-beta.5",
     "react-native": "^0.49.5",
