--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo": "^22.0.2",
     "express": "^4.16.2",
     "mapbox-gl": "^0.41.0",
+    "passport-google-oauth": "^1.0.0",
     "react": "16.0.0-beta.5",
     "react-native": "^0.49.5",
     "react-native-mapbox-gl": "^5.2.0",
