--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["babel-preset-expo"],
+  "presets": ["react-native", "module:react-native-dotenv"],
   "env": {
     "development": {
       "plugins": ["transform-react-jsx-source"]
