--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "jest-expo": "^22.0.0",
+    "babel-preset-expo": "^5.0.0",
+    "jest-expo": "^31.0.0",
+    "react-native-dotenv": "^0.2.0",
     "react-native-scripts": "1.7.0",
     "react-test-renderer": "16.0.0-beta.5"
   },
@@ -19,16 +21,17 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@mapbox/react-native-mapbox-gl": "^6.0.0",
-    "expo": "^22.0.2",
+    "@mapbox/react-native-mapbox-gl": "^6.1.2",
+    "expo": "^32.0.0",
     "express": "^4.16.2",
-    "mapbox-gl": "^0.41.0",
+    "firebase": "^5.5.7",
+    "mapbox-gl": "^0.53.0",
     "passport-google-oauth": "^1.0.0",
-    "react": "16.0.0-beta.5",
-    "react-native": "^0.49.5",
+    "react": "16.5.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-mapbox-gl": "^5.2.0",
-    "react-native-maps": "^0.17.1",
-    "react-native-router-flux": "^4.0.0-beta.23",
-    "react-navigation": "^1.0.0-beta.19"
+    "react-native-maps": "^0.23.0",
+    "react-native-router-flux": "^4.0.6",
+    "react-navigation": "^3.3.2"
   }
 }
