--- a/package.json
+++ b/package.json
@@ -1,21 +1,14 @@
 {
-  "name": "CarPool",
+  "name": "carpool",
   "version": "0.1.0",
   "private": true,
-  "devDependencies": {
-    "babel-preset-expo": "^5.0.0",
-    "jest-expo": "^31.0.0",
-    "react-native-dotenv": "^0.2.0",
-    "react-native-scripts": "1.7.0",
-    "react-test-renderer": "16.0.0-beta.5"
-  },
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "react-native-scripts start",
-    "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
-    "test": "node node_modules/jest/bin/jest.js --watch"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "eject": "expo eject",
+    "test": "node ./node_modules/jest/bin/jest.js --watchAll"
   },
   "jest": {
     "preset": "jest-expo"
@@ -33,5 +26,11 @@
     "react-native-maps": "^0.23.0",
     "react-native-router-flux": "^4.0.6",
     "react-navigation": "^3.3.2"
+  },
+  "devDependencies": {
+    "babel-preset-expo": "^5.0.0",
+    "jest-expo": "^31.0.0",
+    "react-native-dotenv": "^0.2.0",
+    "react-test-renderer": "16.0.0-beta.5"
   }
 }
