--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
+  "rnpm": {
+    "assets": [
+	"./assets/fonts/"
+    ]
+  },
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
