--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "rnpm": {
     "assets": [
-	"./assets/fonts/"
+      "./assets/fonts/"
     ]
   },
   "scripts": {
@@ -30,11 +30,12 @@
     "react-native-mapbox-gl": "^5.2.0",
     "react-native-maps": "^0.23.0",
     "react-native-router-flux": "^4.0.6",
-    "react-navigation": "^3.3.2"
+    "react-navigation": "^3.8.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
     "jest-expo": "^31.0.0",
+    "metro-react-native-babel-preset": "^0.53.1",
     "react-native-dotenv": "^0.2.0",
     "react-test-renderer": "16.0.0-beta.5"
   }
